src/src/parser/Parser.cpp
#include "stratos/Parser.h"
#include "stratos/Lexer.h"
#include <iostream>
#include <sstream>

namespace stratos {

Parser::Parser(const std::vector<Token>& tokens) : tokens(tokens) {}

std::vector<std::unique_ptr<Stmt>> Parser::parse() {
    std::vector<std::unique_ptr<Stmt>> statements;
    while (!isAtEnd()) {
        try {
            auto stmt = declaration();
            statements.push_back(std::move(stmt));
        } catch (ParseError& error) {
            std::cerr << "[Error] " << error.line << ":" << error.column << ": " << error.what() << std::endl;
            synchronize();
        }
    }
    return statements;
}

std::unique_ptr<Expr> Parser::parseExpression() {
    return expression();
}

// --- Declarations ---

std::unique_ptr<Stmt> Parser::declaration() {
    try {
        // Check for doc comment before declaration
        consumeDocComment();

        // std::cout << "[Parser::declaration] Current token: " << peek().lexeme << " (type " << static_cast<int>(peek().type) << ")" << std::endl;

        // Check for common mistake: using 'function' instead of 'fn'
        if (check(TokenType::IDENTIFIER) && peek().lexeme == "function") {
            if (current + 1 < tokens.size() && tokens[current + 1].type == TokenType::IDENTIFIER) {
                throw ParseError("Stratos uses 'fn' to declare functions, not 'function'.", peek().line, peek().column);
            }
        }

        bool isPublic = match({TokenType::PUB});

        if (match({TokenType::VAR, TokenType::VAL})) {
            // std::cout << "[Parser::declaration] Matched VAR/VAL, calling varDeclaration()" << std::endl;
            return varDeclaration(isPublic);
        }
        if (match({TokenType::ASYNC})) {
            consume(TokenType::FN, "Expect 'fn' after 'async'.");
            return fnDeclaration("function", true, true);
        }
        if (match({TokenType::FN})) return fnDeclaration("function", true); // Top level functions are public by default (exported)
        if (match({TokenType::CLASS, TokenType::INTERFACE})) return classDeclaration();
        if (match({TokenType::STRUCT})) return structDeclaration();
        if (match({TokenType::ENUM})) return enumDeclaration();
        if (match({TokenType::TYPE})) return typeAliasDeclaration();
        if (match({TokenType::PACKAGE})) return packageDeclaration();
        if (match({TokenType::USE})) return useStatement();

        // Clear pending doc comment if not used
        pendingDocComment.reset();

        return statement();
    } catch (ParseError& error) {
        // Silently recover from parse errors (e.g., generic type syntax issues)
        synchronize();
        return nullptr;
    }
}

std::unique_ptr<Stmt> Parser::varDeclaration(bool isPublic) {
    bool isMutable = (previous().type == TokenType::VAR);

    // Check for destructuring declaration: val (a, b, c) = expr
    if (match({TokenType::LEFT_PAREN})) {
        std::vector<Token> names;

        // Parse the list of names
        do {
            Token varName = consume(TokenType::IDENTIFIER, "Expect variable name in destructuring.");
            names.push_back(varName);
        } while (match({TokenType::COMMA}));

        consume(TokenType::RIGHT_PAREN, "Expect ')' after destructuring names.");
        consume(TokenType::EQUAL, "Expect '=' after destructuring declaration.");

        std::unique_ptr<Expr> initializer = expression();
        consume(TokenType::SEMICOLON, "Expect ';' after destructuring declaration.");

        return std::make_unique<DestructuringDecl>(isMutable, std::move(names), std::move(initializer), isPublic);
    }

    // Regular variable declaration
    Token name = consume(TokenType::IDENTIFIER, "Expect variable name.");

    std::string typeName = "";
    if (match({TokenType::COLON})) {
        typeName = parseType();
    }

    std::unique_ptr<Expr> initializer = nullptr;
    if (match({TokenType::EQUAL})) {
        initializer = expression();
    }

    consume(TokenType::SEMICOLON, "Expect ';' after variable declaration.");
    auto var = std::make_unique<VarDecl>(name, typeName, std::move(initializer), isMutable, isPublic);
    var->documentation = takePendingDoc();
    return var;
}

std::unique_ptr<Stmt> Parser::fnDeclaration(const std::string& kind, bool isPublic, bool isAsync) {
    // For methods, allow keywords like 'get', 'set', 'use', 'delete' as method names
    Token name;
    if (kind == "method") {
        // Accept either an identifier or certain keywords as method names
        if (check(TokenType::IDENTIFIER)) {
            name = advance();
        } else if (check(TokenType::USE) || check(TokenType::FOR) || check(TokenType::IF) ||
                   check(TokenType::WHILE) || check(TokenType::RETURN) || check(TokenType::VAR) ||
                   check(TokenType::VAL) || check(TokenType::TRUE) || check(TokenType::FALSE)) {
            // Convert the keyword token to act as an identifier for method name
            name = advance();
            name.type = TokenType::IDENTIFIER;  // Treat it as identifier for AST purposes
        } else {
            name = consume(TokenType::IDENTIFIER, "Expect method name.");
        }
    } else {
        name = consume(TokenType::IDENTIFIER, "Expect " + kind + " name.");
    }

    // Skip generic type parameters if present (e.g., <T, E>)
    if (match({TokenType::LESS})) {
        int depth = 1;
        while (depth > 0 && !isAtEnd()) {
            if (match({TokenType::LESS})) {
                depth++;
            } else if (match({TokenType::GREATER})) {
                depth--;
            } else {
                advance();
            }
        }
    }

    consume(TokenType::LEFT_PAREN, "Expect '(' after " + kind + " name.");

    std::vector<Parameter> parameters;

    if (!check(TokenType::RIGHT_PAREN)) {
        do {
            bool isVariadic = false;
            if (match({TokenType::DOT_DOT_DOT})) {
                isVariadic = true;
            }

            Token paramName = consume(TokenType::IDENTIFIER, "Expect parameter name.");
            
            std::string type = "any";
            if (match({TokenType::COLON})) {
                type = parseType();
            }

            std::unique_ptr<Expr> defaultValue = nullptr;
            if (match({TokenType::EQUAL})) {
                defaultValue = expression();
            }

            parameters.push_back(Parameter(paramName, type, std::move(defaultValue), isVariadic));
        } while (match({TokenType::COMMA}));
    }
    consume(TokenType::RIGHT_PAREN, "Expect ')' after parameters.");

    std::string returnType = "void";
    // Support both `fn foo() int {` and `fn foo(): int {` syntax
    if (match({TokenType::COLON})) {
        // Colon-style return type: `fn foo(): int`
        returnType = parseType();
    } else if (check(TokenType::IDENTIFIER) || check(TokenType::INT) || check(TokenType::DOUBLE) ||
        check(TokenType::STRING) || check(TokenType::BOOL) || check(TokenType::VOID) ||
        check(TokenType::ASYNC)) {
        // Optional return type parsing without colon if it's just the type
        if (!check(TokenType::LEFT_BRACE) && !check(TokenType::SEMICOLON)) {
             returnType = parseType();
        }
    }

    // Check for interface method (no body, just semicolon)
    if (check(TokenType::SEMICOLON)) {
        consume(TokenType::SEMICOLON, "Expect ';' after interface method signature.");
        // Return function declaration with null body (interface method)
        auto func = std::make_unique<FunctionDecl>(name, std::move(parameters), returnType, nullptr, isPublic, isAsync);
        func->documentation = takePendingDoc();
        return func;
    }

    consume(TokenType::LEFT_BRACE, "Expect '{' before " + kind + " body.");
    std::vector<std::unique_ptr<Stmt>> body;
    while (!check(TokenType::RIGHT_BRACE) && !isAtEnd()) {
        body.push_back(declaration());
    }
    consume(TokenType::RIGHT_BRACE, "Expect '}' after " + kind + " body.");

    auto bodyPtr = std::make_unique<std::vector<std::unique_ptr<Stmt>>>(std::move(body));
    auto func = std::make_unique<FunctionDecl>(name, std::move(parameters), returnType, std::move(bodyPtr), isPublic, isAsync);
    func->documentation = takePendingDoc();
    return func;
}

std::unique_ptr<Stmt> Parser::classDeclaration() {
    Token name = consume(TokenType::IDENTIFIER, "Expect class name.");

    // Skip generic type parameters if present (e.g., <T, E>)
    if (match({TokenType::LESS})) {
        int depth = 1;
        while (depth > 0 && !isAtEnd()) {
            if (match({TokenType::LESS})) {
                depth++;
            } else if (match({TokenType::GREATER})) {
                depth--;
            } else {
                advance();
            }
        }
    }

    std::unique_ptr<VariableExpr> superclass = nullptr;
    if (match({TokenType::COLON})) {
        consume(TokenType::IDENTIFIER, "Expect superclass name.");
        superclass = std::make_unique<VariableExpr>(previous());
    }

    consume(TokenType::LEFT_BRACE, "Expect '{' before class body.");

    std::vector<std::unique_ptr<Stmt>> methods;
    while (!check(TokenType::RIGHT_BRACE) && !isAtEnd()) {
        bool isPublic = false;
        if (match({TokenType::PUB})) {
            isPublic = true;
        }

        if (match({TokenType::VAR, TokenType::VAL})) {
            methods.push_back(varDeclaration(isPublic));
        } else if (match({TokenType::FN})) {
             methods.push_back(fnDeclaration("method", isPublic));
        } else if (match({TokenType::CONSTRUCTOR})) {
            // Parse constructor as a special function named "constructor"
            Token ctorName = previous(); // "constructor" keyword
            consume(TokenType::LEFT_PAREN, "Expect '(' after constructor.");

            std::vector<Parameter> parameters;

            if (!check(TokenType::RIGHT_PAREN)) {
                do {
                    Token param = consume(TokenType::IDENTIFIER, "Expect parameter name.");
                    
                    std::string paramType = "any";
                    if (match({TokenType::COLON})) {
                        paramType = parseType();
                    }
                    
                    parameters.push_back(Parameter(param, paramType, nullptr, false));
                } while (match({TokenType::COMMA}));
            }

            consume(TokenType::RIGHT_PAREN, "Expect ')' after parameters.");

            // Constructors don't have return types
            std::string returnType = "void";

            // Parse constructor body
            consume(TokenType::LEFT_BRACE, "Expect '{' before constructor body.");
            auto body = std::make_unique<std::vector<std::unique_ptr<Stmt>>>();
            while (!check(TokenType::RIGHT_BRACE) && !isAtEnd()) {
                body->push_back(declaration());
            }
            consume(TokenType::RIGHT_BRACE, "Expect '}' after constructor body.");

            // Create a FunctionDecl with name "constructor"
            methods.push_back(std::make_unique<FunctionDecl>(ctorName, std::move(parameters), returnType, std::move(body), true));
        } else {
             // Skip unknown things inside class for now to avoid infinite loops
             advance();
        }
    }
    consume(TokenType::RIGHT_BRACE, "Expect '}' after class body.");

    auto cls = std::make_unique<ClassDecl>(name, std::move(superclass), std::move(methods));
    cls->documentation = takePendingDoc();
    return cls;
}

std::unique_ptr<Stmt> Parser::structDeclaration() {
    Token name = consume(TokenType::IDENTIFIER, "Expect struct name.");
    consume(TokenType::LEFT_BRACE, "Expect '{' before struct body.");

    std::vector<std::unique_ptr<Stmt>> methods; // Structs fields are VarDecls

    while (!check(TokenType::RIGHT_BRACE) && !isAtEnd()) {
        bool isPublic = true; // Struct fields are public by default
        if (match({TokenType::PUB})) {
            isPublic = true;
        }

        Token fieldName = consume(TokenType::IDENTIFIER, "Expect field name.");
        consume(TokenType::COLON, "Expect ':' after field name.");
        std::string typeName = parseType();
        consume(TokenType::SEMICOLON, "Expect ';' after field declaration.");

        // Create a VarDecl for the field
        // Fields in structs are mutable by default in this implementation context
        auto varDecl = std::make_unique<VarDecl>(fieldName, typeName, nullptr, true, isPublic); 
        methods.push_back(std::move(varDecl));
    }

    consume(TokenType::RIGHT_BRACE, "Expect '}' after struct body.");

    // Reuse ClassDecl for structs as they are handled similarly in runtime
    return std::make_unique<ClassDecl>(name, nullptr, std::move(methods));
}

std::unique_ptr<Stmt> Parser::enumDeclaration() {
    Token name = consume(TokenType::IDENTIFIER, "Expect enum name.");

    consume(TokenType::LEFT_BRACE, "Expect '{' before enum body.");

    std::vector<Token> values;
    while (!check(TokenType::RIGHT_BRACE) && !isAtEnd()) {
        Token valueName = consume(TokenType::IDENTIFIER, "Expect enum value name.");
        values.push_back(valueName);

        // Allow optional comma after each value
        if (!check(TokenType::RIGHT_BRACE)) {
            if (!match({TokenType::COMMA})) {
                // Comma is optional before closing brace or between values
                // If next token is not }, it's an error
                if (!check(TokenType::RIGHT_BRACE)) {
                    throw ParseError("Expect ',' or '}' after enum value.", peek().line, peek().column);
                }
            }
        }
    }

    consume(TokenType::RIGHT_BRACE, "Expect '}' after enum body.");

    auto enumDecl = std::make_unique<EnumDecl>(name, std::move(values));
    enumDecl->documentation = takePendingDoc();
    return enumDecl;
}

std::unique_ptr<Stmt> Parser::typeAliasDeclaration() {
    // type Handler = Function<Request, Response, void>;
    Token name = consume(TokenType::IDENTIFIER, "Expect type alias name.");
    consume(TokenType::EQUAL, "Expect '=' after type alias name.");
    std::string aliasedType = parseType();
    consume(TokenType::SEMICOLON, "Expect ';' after type alias.");

    auto typeAlias = std::make_unique<TypeAliasDecl>(name, aliasedType);
    typeAlias->documentation = takePendingDoc();
    return typeAlias;
}

std::unique_ptr<Stmt> Parser::packageDeclaration() {
    Token name = consume(TokenType::IDENTIFIER, "Expect package name.");
    // Package declarations don't use braces in Go-style
    // Just consume semicolon or newline
    // For now, keep compatibility with old block-style
    if (check(TokenType::LEFT_BRACE)) {
        consume(TokenType::LEFT_BRACE, "Expect '{' before package body.");
        std::vector<std::unique_ptr<Stmt>> body;
        while (!check(TokenType::RIGHT_BRACE) && !isAtEnd()) {
            body.push_back(declaration());
        }
        consume(TokenType::RIGHT_BRACE, "Expect '}' after package body.");
        auto pkg = std::make_unique<PackageDecl>(name, std::move(body));
        pkg->documentation = takePendingDoc();
        return pkg;
    }
    // Go-style: package declaration at top, no braces
    // Consume the semicolon if present
    if (check(TokenType::SEMICOLON)) {
        advance(); // consume the semicolon
    }
    
    // Parse the rest of the file as the package body
    std::vector<std::unique_ptr<Stmt>> body;
    while (!isAtEnd()) {
        body.push_back(declaration());
    }

    auto pkg = std::make_unique<PackageDecl>(name, std::move(body));
    pkg->documentation = takePendingDoc();
    return pkg;
}

std::unique_ptr<Stmt> Parser::useStatement() {
    Token moduleName;
    // Allow 'async' keyword as a module name
    if (check(TokenType::ASYNC)) {
        moduleName = advance();
    } else {
        moduleName = consume(TokenType::IDENTIFIER, "Expect module name after 'use'.");
    }

    // Consume the semicolon if present (Go-style allows omitting it)
    if (check(TokenType::SEMICOLON)) {
        advance();
    }

    return std::make_unique<UseStmt>(moduleName);
}

// --- Statements ---

std::unique_ptr<Stmt> Parser::statement() {
    if (match({TokenType::IF})) return ifStatement();
    if (match({TokenType::WHILE})) return whileStatement();
    if (match({TokenType::FOR})) return forStatement();
    if (match({TokenType::RETURN})) return returnStatement();
    if (match({TokenType::BREAK})) return breakStatement();
    if (match({TokenType::CONTINUE})) return continueStatement();
    if (match({TokenType::DEFER})) return deferStatement();
    if (match({TokenType::SELECT})) return selectStatement();
    // if (match({TokenType::WHEN})) return whenStatement(); // Handled as expression statement now
    if (match({TokenType::LEFT_BRACE})) return block();

    return expressionStatement();
}

std::unique_ptr<Expr> Parser::whenExpression() {
    consume(TokenType::LEFT_PAREN, "Expect '(' after 'when'.");
    
    std::unique_ptr<Expr> condition = nullptr;
    // Check if we have a condition or if it's 'when ()' (which acts like switch true)
    // Or maybe 'when ( expr )'
    // Stratos syntax: when (x) { ... } or when { ... } (if we supported no parens)
    // But typical is when (x) { case 1 -> ... }
    
    if (!check(TokenType::RIGHT_PAREN)) {
        condition = expression();
    }
    consume(TokenType::RIGHT_PAREN, "Expect ')' after when condition.");
    
    consume(TokenType::LEFT_BRACE, "Expect '{' before when body.");
    
    std::vector<WhenCase> cases;
    
    while (!check(TokenType::RIGHT_BRACE) && !isAtEnd()) {
        // Parse case
        // Case syntax: 
        // 1. value -> statement/block
        // 2. else -> statement/block
        // 3. value1, value2 -> ...
        
        std::vector<std::unique_ptr<Expr>> caseConditions;
        bool isElse = false;
        
        if (match({TokenType::ELSE})) {
            isElse = true;
            consume(TokenType::ARROW, "Expect '->' after 'else'.");
        } else {
            // Parse conditions
            do {
                caseConditions.push_back(expression());
            } while (match({TokenType::COMMA}));
            
            consume(TokenType::ARROW, "Expect '->' after case conditions.");
        }
        
        // Parse body
        std::unique_ptr<Stmt> body;
        if (match({TokenType::LEFT_BRACE})) {
            body = block();
        } else {
            // Single statement/expression
            // If it's an expression, wrap in return/expression stmt?
            // "when" is an expression, so the body should evaluate to something.
            // If we parse as statement(), it covers ExpressionStmt.
            // But we need to capture the value if it's being assigned.
            // For now, let's parse as statement. Interpreter handles returning value from block/stmt.
            body = statement();
        }
        
        cases.push_back(WhenCase(std::move(caseConditions), std::move(body), isElse));
    }
    
    consume(TokenType::RIGHT_BRACE, "Expect '}' after when body.");
    
    return std::make_unique<WhenExpr>(std::move(condition), std::move(cases));
}

std::unique_ptr<Expr> Parser::parseInterpolatedString(const std::string& template_str) {
    std::vector<InterpolatedPart> parts;
    std::string currentLiteral;
    size_t i = 0;

    while (i < template_str.size()) {
        if (template_str[i] == '$' && i + 1 < template_str.size()) {
            // Check for interpolation
            if (template_str[i + 1] == '{') {
                // ${expression} syntax
                if (!currentLiteral.empty()) {
                    parts.push_back(InterpolatedPart(currentLiteral));
                    currentLiteral.clear();
                }

                i += 2; // Skip "${"
                std::string exprStr;
                int braceCount = 1;
                while (i < template_str.size() && braceCount > 0) {
                    if (template_str[i] == '{') braceCount++;
                    else if (template_str[i] == '}') braceCount--;
                    if (braceCount > 0) exprStr += template_str[i];
                    i++;
                }

                // Parse the expression string
                Lexer exprLexer(exprStr, "<interpolation>");
                auto exprTokens = exprLexer.scanTokens();
                Parser exprParser(exprTokens);
                auto expr = exprParser.parseExpression();
                if (expr) {
                    parts.push_back(InterpolatedPart(std::move(expr)));
                }
            } else if (isalpha(template_str[i + 1]) || template_str[i + 1] == '_') {
                // $identifier syntax
                if (!currentLiteral.empty()) {
                    parts.push_back(InterpolatedPart(currentLiteral));
                    currentLiteral.clear();
                }

                i++; // Skip "$"
                std::string identifier;
                while (i < template_str.size() && (isalnum(template_str[i]) || template_str[i] == '_')) {
                    identifier += template_str[i];
                    i++;
                }

                // Create a VariableExpr for the identifier
                Token varToken;
                varToken.type = TokenType::IDENTIFIER;
                varToken.lexeme = identifier;
                varToken.line = previous().line;
                varToken.column = previous().column;
                varToken.file = previous().file;
                parts.push_back(InterpolatedPart(std::make_unique<VariableExpr>(varToken)));
            } else {
                currentLiteral += template_str[i];
                i++;
            }
        } else {
            currentLiteral += template_str[i];
            i++;
        }
    }

    if (!currentLiteral.empty()) {
        parts.push_back(InterpolatedPart(currentLiteral));
    }

    return std::make_unique<InterpolatedStringExpr>(std::move(parts));
}

std::unique_ptr<Stmt> Parser::ifStatement() {
    std::unique_ptr<Expr> condition = expression();

    std::unique_ptr<Stmt> thenBranch = statement();
    std::unique_ptr<Stmt> elseBranch = nullptr;

    if (match({TokenType::ELSE})) {
        elseBranch = statement();
    }

    return std::make_unique<IfStmt>(std::move(condition), std::move(thenBranch), std::move(elseBranch));
}

std::unique_ptr<Stmt> Parser::whileStatement() {
    std::unique_ptr<Expr> condition = expression();
    std::unique_ptr<Stmt> body = statement();
    return std::make_unique<WhileStmt>(std::move(condition), std::move(body));
}

std::unique_ptr<Stmt> Parser::forStatement() {
    // Parse: for (val|var) variable (: type)? in iterable { body }

    // Check for val or var (optional — defaults to val/immutable if omitted)
    bool isMutable = false;
    if (match({TokenType::VAR})) {
        isMutable = true;
    } else if (match({TokenType::VAL})) {
        isMutable = false;
    }
    // If neither val nor var, default to immutable (e.g., "for i in 0..10")

    // Get variable name
    Token variable = consume(TokenType::IDENTIFIER, "Expect variable name in for loop.");

    // Optional type annotation
    std::string varType = "";
    if (match({TokenType::COLON})) {
        varType = parseType();
    }

    // Expect 'in' keyword
    if (!match({TokenType::IDENTIFIER})) {
        throw ParseError("Expect 'in' keyword in for loop", peek().line, peek().column);
    }
    if (previous().lexeme != "in") {
        throw ParseError("Expect 'in' keyword in for loop, got '" + previous().lexeme + "'", previous().line, previous().column);
    }

    // Parse iterable expression
    std::unique_ptr<Expr> iterable = expression();

    // Parse loop body
    std::unique_ptr<Stmt> body = statement();

    return std::make_unique<ForStmt>(variable, isMutable, varType, std::move(iterable), std::move(body));
}

std::unique_ptr<Stmt> Parser::returnStatement() {
    Token keyword = previous();
    std::unique_ptr<Expr> value = nullptr;
    if (!check(TokenType::SEMICOLON)) {
        value = expression();
    }
    consume(TokenType::SEMICOLON, "Expect ';' after return value.");
    return std::make_unique<ReturnStmt>(keyword, std::move(value));
}

std::unique_ptr<Stmt> Parser::breakStatement() {
    Token keyword = previous();
    consume(TokenType::SEMICOLON, "Expect ';' after 'break'.");
    return std::make_unique<BreakStmt>(keyword);
}

std::unique_ptr<Stmt> Parser::continueStatement() {
    Token keyword = previous();
    consume(TokenType::SEMICOLON, "Expect ';' after 'continue'.");
    return std::make_unique<ContinueStmt>(keyword);
}

std::unique_ptr<Stmt> Parser::deferStatement() {
    Token keyword = previous();
    // Parse the deferred statement (typically a function call)
    std::unique_ptr<Stmt> stmt = statement();
    return std::make_unique<DeferStmt>(keyword, std::move(stmt));
}

std::unique_ptr<Stmt> Parser::selectStatement() {
    Token keyword = previous();
    consume(TokenType::LEFT_BRACE, "Expect '{' after 'select'.");

    std::vector<SelectCase> cases;

    while (!check(TokenType::RIGHT_BRACE) && !isAtEnd()) {
        // Parse case keyword or default
        if (match({TokenType::CASE})) {
            // Parse channel operation: var <- channel (receive) or channel <- value (send)
            Token variable = Token{TokenType::IDENTIFIER, "", 0, 0, ""};
            std::unique_ptr<Expr> channel = nullptr;
            std::unique_ptr<Expr> sendValue = nullptr;
            SelectCase::Kind kind;

            // Try to parse: identifier <- expr (receive) or expr <- expr (send)
            std::unique_ptr<Expr> leftExpr = expression();

            if (match({TokenType::LEFT_ARROW})) {
                // This could be either receive or send depending on left side
                // If left is a simple identifier, it's receive: var <- channel
                // Otherwise it's send: channel <- value
                if (auto* varExpr = dynamic_cast<VariableExpr*>(leftExpr.get())) {
                    // Receive: var <- channel
                    kind = SelectCase::Kind::RECEIVE;
                    variable = varExpr->name;
                    channel = expression();
                } else {
                    // Send: channel <- value
                    kind = SelectCase::Kind::SEND;
                    channel = std::move(leftExpr);
                    sendValue = expression();
                }
            } else {
                // Just an expression (probably a method call like channel.receive())
                kind = SelectCase::Kind::RECEIVE;
                channel = std::move(leftExpr);
            }

            consume(TokenType::COLON, "Expect ':' after select case.");

            // Parse case body - can be a block or a single statement
            std::unique_ptr<Stmt> body;
            if (check(TokenType::LEFT_BRACE)) {
                advance();
                body = block();
            } else {
                body = statement();
            }

            cases.push_back(SelectCase(kind, variable, std::move(channel), std::move(sendValue), std::move(body)));
        } else if (match({TokenType::ELSE})) {
            // Default case
            consume(TokenType::COLON, "Expect ':' after 'else' in select.");

            std::unique_ptr<Stmt> body;
            if (check(TokenType::LEFT_BRACE)) {
                advance();
                body = block();
            } else {
                body = statement();
            }

            Token emptyVar{TokenType::IDENTIFIER, "", keyword.line, keyword.column, keyword.file};
            cases.push_back(SelectCase(SelectCase::Kind::DEFAULT, emptyVar, nullptr, nullptr, std::move(body)));
        } else {
            throw ParseError("Expect 'case' or 'else' in select statement.", peek().line, peek().column);
        }
    }

    consume(TokenType::RIGHT_BRACE, "Expect '}' after select cases.");
    return std::make_unique<SelectStmt>(keyword, std::move(cases));
}

std::unique_ptr<Stmt> Parser::block() {
    std::vector<std::unique_ptr<Stmt>> statements;
    while (!check(TokenType::RIGHT_BRACE) && !isAtEnd()) {
        statements.push_back(declaration());
    }
    consume(TokenType::RIGHT_BRACE, "Expect '}' after block.");
    return std::make_unique<BlockStmt>(std::move(statements));
}

std::unique_ptr<Stmt> Parser::expressionStatement() {
    std::unique_ptr<Expr> expr = expression();
    consume(TokenType::SEMICOLON, "Expect ';' after expression.");
    return std::make_unique<ExpressionStmt>(std::move(expr));
}

// --- Expressions ---

std::unique_ptr<Expr> Parser::expression() {
    return assignment();
}

std::unique_ptr<Expr> Parser::assignment() {
    std::unique_ptr<Expr> expr = range(); 

    if (match({TokenType::EQUAL, TokenType::PLUS_EQUAL, TokenType::MINUS_EQUAL})) {
        Token equals = previous();
        std::unique_ptr<Expr> value = assignment(); // Right-associative

        // In a full compiler, we'd check if 'expr' is a valid assignment target (VariableExpr)
        // For AST generation, we can just return a BinaryExpr or specialized AssignExpr
        // For now, treat as BinaryExpr to keep it simple, or cast.
        return std::make_unique<BinaryExpr>(std::move(expr), equals, std::move(value));
    }
    return expr;
}

std::unique_ptr<Expr> Parser::range() {
    std::unique_ptr<Expr> expr = pipe();
    if (match({TokenType::DOT_DOT})) {
        Token op = previous();
        std::unique_ptr<Expr> right = pipe();
        expr = std::make_unique<BinaryExpr>(std::move(expr), op, std::move(right));
    }
    return expr;
}

std::unique_ptr<Expr> Parser::pipe() {
    std::unique_ptr<Expr> expr = logicOr();
    while (match({TokenType::PIPE})) {
        Token op = previous();
        std::unique_ptr<Expr> right = logicOr();
        expr = std::make_unique<BinaryExpr>(std::move(expr), op, std::move(right));
    }
    return expr;
}

std::unique_ptr<Expr> Parser::logicOr() {
    std::unique_ptr<Expr> expr = logicAnd();
    while (match({TokenType::OR})) {
        Token op = previous();
        std::unique_ptr<Expr> right = logicAnd();
        expr = std::make_unique<BinaryExpr>(std::move(expr), op, std::move(right));
    }
    return expr;
}

std::unique_ptr<Expr> Parser::logicAnd() {
    std::unique_ptr<Expr> expr = bitwiseOr();
    while (match({TokenType::AND})) {
        Token op = previous();
        std::unique_ptr<Expr> right = bitwiseOr();
        expr = std::make_unique<BinaryExpr>(std::move(expr), op, std::move(right));
    }
    return expr;
}

std::unique_ptr<Expr> Parser::bitwiseOr() {
    std::unique_ptr<Expr> expr = bitwiseXor();
    while (match({TokenType::BITWISE_OR})) {
        Token op = previous();
        std::unique_ptr<Expr> right = bitwiseXor();
        expr = std::make_unique<BinaryExpr>(std::move(expr), op, std::move(right));
    }
    return expr;
}

std::unique_ptr<Expr> Parser::bitwiseXor() {
    std::unique_ptr<Expr> expr = bitwiseAnd();
    while (match({TokenType::BITWISE_XOR})) {
        Token op = previous();
        std::unique_ptr<Expr> right = bitwiseAnd();
        expr = std::make_unique<BinaryExpr>(std::move(expr), op, std::move(right));
    }
    return expr;
}

std::unique_ptr<Expr> Parser::bitwiseAnd() {
    std::unique_ptr<Expr> expr = equality();
    while (match({TokenType::BITWISE_AND})) {
        Token op = previous();
        std::unique_ptr<Expr> right = equality();
        expr = std::make_unique<BinaryExpr>(std::move(expr), op, std::move(right));
    }
    return expr;
}

std::unique_ptr<Expr> Parser::equality() {
    std::unique_ptr<Expr> expr = comparison();
    while (match({TokenType::BANG_EQUAL, TokenType::EQUAL_EQUAL})) {
        Token op = previous();
        std::unique_ptr<Expr> right = comparison();
        expr = std::make_unique<BinaryExpr>(std::move(expr), op, std::move(right));
    }
    return expr;
}

std::unique_ptr<Expr> Parser::comparison() {
    std::unique_ptr<Expr> expr = bitwiseShift();
    while (match({TokenType::GREATER, TokenType::GREATER_EQUAL, TokenType::LESS, TokenType::LESS_EQUAL})) {
        Token op = previous();
        std::unique_ptr<Expr> right = bitwiseShift();
        expr = std::make_unique<BinaryExpr>(std::move(expr), op, std::move(right));
    }
    return expr;
}
